--- a/Views/Restaurant/Delete.cshtml
+++ b/Views/Restaurant/Delete.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = Model.Name;
 }
 
-<h1>@Model.Name</h1>
-<h2>Restaurant Details</h2>
+<h1>Delete @Model.Name</h1>
+<h2>Are you sure you want to delete @Model.Name?</h2>
 <hr>
 
 <dl class="row">
@@ -35,12 +35,7 @@
     </dd>
 </dl>
 
-@await Component.InvokeAsync(nameof(RestaurantRatings), new { restaurantId = Model.Id})
-
-<div>
+<form asp-action="Delete" class="d-flex justify-content-between align-items-baseline">
     <a asp-action="Index">Back to List</a>
-    <span>|</span>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> 
-    @* asp-route-itemid does not correspond to the rest of the code *@
-    @* @Html.ActionLink("Back to List", "Index")|@Html.ActionLink("Edit","Edit", new{id=Model.Id}) *@
-</div>
+    <input type="submit" value="Delete" class="btn btn-danger"/>
+</form>
