finished add rating capabilities

--- a/Views/Rating/Index.cshtml
+++ b/Views/Rating/Index.cshtml
@@ -4,6 +4,8 @@
 }
 
 <h1>Restaurant Ratings</h1>
+<hr>
+<div>
 <table class="table">
     <tr>
         <th>Restaurant</th>
@@ -21,3 +23,4 @@
         </tr>
     }
 </table>
+</div>
