--- a/Views/Restaurant/Index.cshtml
+++ b/Views/Restaurant/Index.cshtml
@@ -9,9 +9,11 @@
 
 <table class="table">
     <thead>
-        <tr>Name</tr>
-        <tr>@Html.DisplayNameFor(model => model.Score)</tr>
-        <tr> </tr>
+        <tr>
+            <th>Name</th>
+            <th>@Html.DisplayNameFor(model => model.Score)</th>
+            <th> </th>
+        </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
